# BeatSaverSpotifyFinder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  install.sh
include/: b64_encode.h  bssf.h  spotifyget.h
src/: b64_encode.cpp  bssf.cpp  bssf.h  spotifyget.cpp  spotifyget.h
